# WideEyes-AML-watchlist

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: dashboard.rs  detail.rs  mod.rs  search.rs  user.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/components/layouts/: Footer.tsx  Layout.tsx
frontend/src/components/layouts/TopBar/: Modal.tsx  UserModal.tsx  index.tsx
frontend/src/components/layouts/m/: Footer.tsx
frontend/src/components/organisms/: Pagination.tsx
frontend/src/components/organisms/m/: Pagination.tsx
frontend/src/components/pages/m/: Detail.tsx  index.tsx
frontend/src/components/pages/w/: BusinessDetail.tsx  Detail.tsx  index.tsx
frontend/src/components/templates/: Contact.tsx
frontend/src/components/templates/amlDetail/: Associations.tsx  BusinessCore.tsx  BusinessTop.tsx  Core.tsx  Evidence.tsx  Others.tsx  PepPositions.tsx  Risks.tsx  Sanctions.tsx  (+1 more)
frontend/src/contexts/: SearchStateContext.tsx  UserContext.tsx  toggleContext.tsx
frontend/src/datas/: aml.ts  footer.ts  header.ts  main.ts  weather.ts
frontend/src/interfaces/: dashboard.ts  detail.ts  search.ts
frontend/src/pages/: _app.tsx  _error.tsx  contact.tsx  dashboard.tsx  index.tsx  login.tsx
frontend/src/pages/business/: [amlId].tsx
frontend/src/pages/individual/: [amlId].tsx
frontend/src/styles/: globals.css
frontend/src/types/: aml.ts  main.ts
frontend/src/utils/: safeLocalStorage.ts  useHandleImageError.ts  useModalClose.ts  useModalCloseDiv.ts  useTitleFromDataSet.ts
(+20 files in other folders)
