[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-rustls","macros","chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10.1"
jsonwebtoken = "7.2.0"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.4"
time = "0.3"
regex="1.5.4"






